# chavezcoinwallet-old

./: .gitignore  .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake
build_v1.0/: CMakeCache.txt  CryptoNoteWalletConfig.h  Makefile  cmake_install.cmake  qrc_resources.cpp
src/images/: chavezcoin.icns
